--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,45 @@
-.title {
-  background: rgb(121, 242, 157);
+.layout-wrapper {
+  display: flex;
+  min-height: 100vh;
+  .slider-wrapper,
+  .setting-wrapper {
+    width: 300px;
+  }
+  .canvas-wrapper {
+    flex: 1;
+    border: 1px solid red;
+  }
+  .component-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    padding: 8px;
+    .component-list {
+      color: #333;
+      border: 1px solid #e5e6e8;
+      font-size: 10px;
+      border-radius: 6px;
+      padding: 0 8px;
+      cursor: grab;
+      width: calc(50% - 4px);
+      box-sizing: border-box;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 8px;
+      &:nth-child(odd) {
+        margin-right: 4px;
+      }
+      &:nth-child(even) {
+        margin-left: 4px;
+      }
+    }
+  }
+}
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
