--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -4,6 +4,12 @@
   .slider-wrapper,
   .setting-wrapper {
     width: 300px;
+    .title {
+      font-size: 16px;
+    }
+    .form-render {
+      margin-top: 15px;
+    }
   }
   .canvas-wrapper {
     flex: 1;
@@ -37,6 +43,7 @@
     }
   }
 }
+
 ul,
 li {
   list-style: none;
