--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -14,6 +14,10 @@
   .canvas-wrapper {
     flex: 1;
     border: 1px solid red;
+    .selected {
+      border: 1px solid #4569d4;
+      cursor: move;
+    }
   }
   .component-wrapper {
     display: flex;
