feat: canvas 样式修改

--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -11,9 +11,14 @@
       margin-top: 15px;
     }
   }
+  .slider-wrapper {
+    border-right: 1px solid #ddd;
+  }
+  .setting-wrapper {
+    border-left: 1px solid #ddd;
+  }
   .canvas-wrapper {
     flex: 1;
-    border: 1px solid red;
     .selected {
       border: 1px solid #4569d4;
       cursor: move;
